Add curations to relevance_search (#90702)